--- a/tests/test_cases/2025/commands/7E4.7EC.220103|fc=1.yaml
+++ b/tests/test_cases/2025/commands/7E4.7EC.220103|fc=1.yaml
@@ -283,6 +283,46 @@ test_cases:
 - expected_values:
     SANTAFEHYB_HVBAT_CMU033_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU034_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU035_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU036_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU037_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU038_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU039_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU040_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU041_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU042_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU043_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU044_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU045_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU046_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU047_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU048_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU049_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU050_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU051_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU052_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU053_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU054_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU055_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU056_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU057_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU058_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU059_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU060_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU061_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU062_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU063_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU064_VOLT: 3.8
+  response: |-
+    7EC1027620103FFFFFF
+    7EC21FFBFBFBEBFBFBE
+    7EC22BEBEBEBEBEBEBE
+    7EC23BEBEBEBFBEBEBE
+    7EC24BEBEBFBEBFBFBF
+    7EC25BFBFBFBFBEAAAA
+- expected_values:
+    SANTAFEHYB_HVBAT_CMU033_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU034_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU035_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU036_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU037_VOLT: 3.82
@@ -326,8 +366,8 @@ test_cases:
     SANTAFEHYB_HVBAT_CMU035_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU036_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU037_VOLT: 3.82
-    SANTAFEHYB_HVBAT_CMU038_VOLT: 3.82
-    SANTAFEHYB_HVBAT_CMU039_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU038_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU039_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU040_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU041_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU042_VOLT: 3.82
@@ -339,7 +379,7 @@ test_cases:
     SANTAFEHYB_HVBAT_CMU048_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU049_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU050_VOLT: 3.82
-    SANTAFEHYB_HVBAT_CMU051_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU051_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU052_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU053_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU054_VOLT: 3.82
@@ -355,9 +395,9 @@ test_cases:
     SANTAFEHYB_HVBAT_CMU064_VOLT: 3.82
   response: |-
     7EC1027620103FFFFFF
-    7EC21FFBFBFBFBFBFBF
-    7EC22BEBFBFBFBFBFBF
-    7EC23BFBFBFBFBFBEBF
+    7EC21FFBFBFBFBFBFBE
+    7EC22BFBFBFBFBFBFBF
+    7EC23BFBFBFBFBFBFBF
     7EC24BFBFBFBFBFBFBF
     7EC25BFBFBFBFBFAAAA
 - expected_values:
@@ -570,9 +610,9 @@ test_cases:
     SANTAFEHYB_HVBAT_CMU039_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU040_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU041_VOLT: 3.82
-    SANTAFEHYB_HVBAT_CMU042_VOLT: 3.84
-    SANTAFEHYB_HVBAT_CMU043_VOLT: 3.84
-    SANTAFEHYB_HVBAT_CMU044_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU042_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU043_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU044_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU045_VOLT: 3.84
     SANTAFEHYB_HVBAT_CMU046_VOLT: 3.84
     SANTAFEHYB_HVBAT_CMU047_VOLT: 3.84
@@ -582,7 +622,7 @@ test_cases:
     SANTAFEHYB_HVBAT_CMU051_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU052_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU053_VOLT: 3.82
-    SANTAFEHYB_HVBAT_CMU054_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU054_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU055_VOLT: 3.84
     SANTAFEHYB_HVBAT_CMU056_VOLT: 3.84
     SANTAFEHYB_HVBAT_CMU057_VOLT: 3.84
@@ -591,15 +631,15 @@ test_cases:
     SANTAFEHYB_HVBAT_CMU060_VOLT: 3.84
     SANTAFEHYB_HVBAT_CMU061_VOLT: 3.84
     SANTAFEHYB_HVBAT_CMU062_VOLT: 3.84
-    SANTAFEHYB_HVBAT_CMU063_VOLT: 3.82
-    SANTAFEHYB_HVBAT_CMU064_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU063_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU064_VOLT: 3.84
   response: |-
     7EC1027620103FFFFFF
     7EC21FFC0C0C0C0C0BF
-    7EC22BFBFBFC0C0C0C0
+    7EC22BFBFBFBFBFBFC0
     7EC23C0C0C0C0BFBFBF
-    7EC24BFC0C0C0C0C0C0
-    7EC25C0C0C0BFBFAAAA
+    7EC24BFBFC0C0C0C0C0
+    7EC25C0C0C0C0C0AAAA
 - expected_values:
     SANTAFEHYB_HVBAT_CMU033_VOLT: 3.84
     SANTAFEHYB_HVBAT_CMU034_VOLT: 3.84
