--- a/tests/test_cases/2025/commands/7E4.7EC.220103|fc=1.yaml
+++ b/tests/test_cases/2025/commands/7E4.7EC.220103|fc=1.yaml
@@ -241,8 +241,8 @@ test_cases:
     7EC24BEBEBEBEBEBEBE
     7EC25BEBEBFBEBEAAAA
 - expected_values:
-    SANTAFEHYB_HVBAT_CMU033_VOLT: 3.8
-    SANTAFEHYB_HVBAT_CMU034_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU033_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU034_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU035_VOLT: 3.8
     SANTAFEHYB_HVBAT_CMU036_VOLT: 3.8
     SANTAFEHYB_HVBAT_CMU037_VOLT: 3.8
@@ -263,23 +263,23 @@ test_cases:
     SANTAFEHYB_HVBAT_CMU052_VOLT: 3.8
     SANTAFEHYB_HVBAT_CMU053_VOLT: 3.8
     SANTAFEHYB_HVBAT_CMU054_VOLT: 3.8
-    SANTAFEHYB_HVBAT_CMU055_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU055_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU056_VOLT: 3.8
-    SANTAFEHYB_HVBAT_CMU057_VOLT: 3.8
-    SANTAFEHYB_HVBAT_CMU058_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU057_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU058_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU059_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU060_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU061_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU062_VOLT: 3.82
-    SANTAFEHYB_HVBAT_CMU063_VOLT: 3.8
-    SANTAFEHYB_HVBAT_CMU064_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU063_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU064_VOLT: 3.82
   response: |-
     7EC1027620103FFFFFF
-    7EC21FFBEBEBEBEBEBE
+    7EC21FFBFBFBEBEBEBE
     7EC22BEBEBEBEBEBEBE
     7EC23BEBEBEBEBEBEBE
-    7EC24BEBEBEBEBEBEBF
-    7EC25BFBFBFBEBEAAAA
+    7EC24BEBEBFBEBFBFBF
+    7EC25BFBFBFBFBFAAAA
 - expected_values:
     SANTAFEHYB_HVBAT_CMU033_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU034_VOLT: 3.82
@@ -367,6 +367,46 @@ test_cases:
     SANTAFEHYB_HVBAT_CMU036_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU037_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU038_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU039_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU040_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU041_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU042_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU043_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU044_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU045_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU046_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU047_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU048_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU049_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU050_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU051_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU052_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU053_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU054_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU055_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU056_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU057_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU058_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU059_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU060_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU061_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU062_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU063_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU064_VOLT: 3.82
+  response: |-
+    7EC1027620103FFFFFF
+    7EC21FFBFBFBFBFBFBE
+    7EC22BEBEBFBFBFBFBF
+    7EC23BFBFBFBFBFBEBE
+    7EC24BFBEBFBFBFBFBF
+    7EC25BFBFBFBFBFAAAA
+- expected_values:
+    SANTAFEHYB_HVBAT_CMU033_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU034_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU035_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU036_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU037_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU038_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU039_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU040_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU041_VOLT: 3.82
@@ -390,16 +430,16 @@ test_cases:
     SANTAFEHYB_HVBAT_CMU059_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU060_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU061_VOLT: 3.82
-    SANTAFEHYB_HVBAT_CMU062_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU062_VOLT: 3.84
     SANTAFEHYB_HVBAT_CMU063_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU064_VOLT: 3.82
   response: |-
     7EC1027620103FFFFFF
-    7EC21FFBFBFBFBFBFBE
+    7EC21FFBFBFBFBFBFBF
     7EC22BFBFBFBFBFBFBF
     7EC23BFBFBFBFBFBFBF
     7EC24BFBFBFBFBFBFBF
-    7EC25BFBFBFBFBFAAAA
+    7EC25BFBFC0BFBFAAAA
 - expected_values:
     SANTAFEHYB_HVBAT_CMU033_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU034_VOLT: 3.82
@@ -639,6 +679,46 @@ test_cases:
     7EC22BFBFBFBFBFBFC0
     7EC23C0C0C0C0BFBFBF
     7EC24BFBFC0C0C0C0C0
+    7EC25C0C0C0C0C0AAAA
+- expected_values:
+    SANTAFEHYB_HVBAT_CMU033_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU034_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU035_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU036_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU037_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU038_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU039_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU040_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU041_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU042_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU043_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU044_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU045_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU046_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU047_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU048_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU049_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU050_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU051_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU052_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU053_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU054_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU055_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU056_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU057_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU058_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU059_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU060_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU061_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU062_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU063_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU064_VOLT: 3.84
+  response: |-
+    7EC1027620103FFFFFF
+    7EC21FFC0C0C0C0C0BF
+    7EC22BFC0C0C0C0C0C0
+    7EC23C0C0C0C0C0BFC0
+    7EC24C0C0C0C0C0C0C0
     7EC25C0C0C0C0C0AAAA
 - expected_values:
     SANTAFEHYB_HVBAT_CMU033_VOLT: 3.84
