--- a/tests/test_cases/2025/commands/7E4.7EC.220105|fc=1.yaml
+++ b/tests/test_cases/2025/commands/7E4.7EC.220105|fc=1.yaml
@@ -141,6 +141,16 @@ test_cases:
     7EC2570000000000000
     7EC260000000000AAAA
 - expected_values:
+    SANTAFEHYB_HVBAT_SOC_DISP: 60
+  response: |-
+    7EC102E620105E03A64
+    7EC2100008D01007A00
+    7EC2200000000000014
+    7EC23B4190000004B00
+    7EC240003E801000000
+    7EC2578000000000000
+    7EC260000000000AAAA
+- expected_values:
     SANTAFEHYB_HVBAT_SOC_DISP: 73.5
   response: |-
     7EC102E620105E03A64
