--- a/tests/test_cases/2025/commands/7E4.7EC.220102|fc=1.yaml
+++ b/tests/test_cases/2025/commands/7E4.7EC.220102|fc=1.yaml
@@ -1,6 +1,46 @@
 command_id: 7E4.7EC.220102|fc=1
 test_cases:
 - expected_values:
+    SANTAFEHYB_HVBAT_CMU001_VOLT: 3.28
+    SANTAFEHYB_HVBAT_CMU002_VOLT: 3.3
+    SANTAFEHYB_HVBAT_CMU003_VOLT: 3.32
+    SANTAFEHYB_HVBAT_CMU004_VOLT: 3.32
+    SANTAFEHYB_HVBAT_CMU005_VOLT: 3.32
+    SANTAFEHYB_HVBAT_CMU006_VOLT: 3.32
+    SANTAFEHYB_HVBAT_CMU007_VOLT: 3.32
+    SANTAFEHYB_HVBAT_CMU008_VOLT: 3.32
+    SANTAFEHYB_HVBAT_CMU009_VOLT: 3.32
+    SANTAFEHYB_HVBAT_CMU010_VOLT: 3.32
+    SANTAFEHYB_HVBAT_CMU011_VOLT: 3.32
+    SANTAFEHYB_HVBAT_CMU012_VOLT: 3.34
+    SANTAFEHYB_HVBAT_CMU013_VOLT: 3.32
+    SANTAFEHYB_HVBAT_CMU014_VOLT: 3.32
+    SANTAFEHYB_HVBAT_CMU015_VOLT: 3.32
+    SANTAFEHYB_HVBAT_CMU016_VOLT: 3.32
+    SANTAFEHYB_HVBAT_CMU017_VOLT: 3.32
+    SANTAFEHYB_HVBAT_CMU018_VOLT: 3.32
+    SANTAFEHYB_HVBAT_CMU019_VOLT: 3.32
+    SANTAFEHYB_HVBAT_CMU020_VOLT: 3.32
+    SANTAFEHYB_HVBAT_CMU021_VOLT: 3.32
+    SANTAFEHYB_HVBAT_CMU022_VOLT: 3.32
+    SANTAFEHYB_HVBAT_CMU023_VOLT: 3.32
+    SANTAFEHYB_HVBAT_CMU024_VOLT: 3.34
+    SANTAFEHYB_HVBAT_CMU025_VOLT: 3.32
+    SANTAFEHYB_HVBAT_CMU026_VOLT: 3.32
+    SANTAFEHYB_HVBAT_CMU027_VOLT: 3.32
+    SANTAFEHYB_HVBAT_CMU028_VOLT: 3.32
+    SANTAFEHYB_HVBAT_CMU029_VOLT: 3.32
+    SANTAFEHYB_HVBAT_CMU030_VOLT: 3.32
+    SANTAFEHYB_HVBAT_CMU031_VOLT: 3.32
+    SANTAFEHYB_HVBAT_CMU032_VOLT: 3.32
+  response: |-
+    7EC1027620102FFFFFF
+    7EC21FFA4A5A6A6A6A6
+    7EC22A6A6A6A6A6A7A6
+    7EC23A6A6A6A6A6A6A6
+    7EC24A6A6A6A7A6A6A6
+    7EC25A6A6A6A6A6AAAA
+- expected_values:
     SANTAFEHYB_HVBAT_CMU001_VOLT: 3.36
     SANTAFEHYB_HVBAT_CMU002_VOLT: 3.38
     SANTAFEHYB_HVBAT_CMU003_VOLT: 3.38
@@ -82,29 +122,29 @@ test_cases:
     7EC25AFAFAFAEAEAAAA
 - expected_values:
     SANTAFEHYB_HVBAT_CMU001_VOLT: 3.48
-    SANTAFEHYB_HVBAT_CMU002_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU002_VOLT: 3.48
     SANTAFEHYB_HVBAT_CMU003_VOLT: 3.5
     SANTAFEHYB_HVBAT_CMU004_VOLT: 3.5
     SANTAFEHYB_HVBAT_CMU005_VOLT: 3.5
     SANTAFEHYB_HVBAT_CMU006_VOLT: 3.5
     SANTAFEHYB_HVBAT_CMU007_VOLT: 3.5
-    SANTAFEHYB_HVBAT_CMU008_VOLT: 3.5
-    SANTAFEHYB_HVBAT_CMU009_VOLT: 3.5
-    SANTAFEHYB_HVBAT_CMU010_VOLT: 3.5
-    SANTAFEHYB_HVBAT_CMU011_VOLT: 3.5
-    SANTAFEHYB_HVBAT_CMU012_VOLT: 3.5
-    SANTAFEHYB_HVBAT_CMU013_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU008_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU009_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU010_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU011_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU012_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU013_VOLT: 3.52
     SANTAFEHYB_HVBAT_CMU014_VOLT: 3.5
     SANTAFEHYB_HVBAT_CMU015_VOLT: 3.5
-    SANTAFEHYB_HVBAT_CMU016_VOLT: 3.5
-    SANTAFEHYB_HVBAT_CMU017_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU016_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU017_VOLT: 3.52
     SANTAFEHYB_HVBAT_CMU018_VOLT: 3.5
-    SANTAFEHYB_HVBAT_CMU019_VOLT: 3.5
-    SANTAFEHYB_HVBAT_CMU020_VOLT: 3.5
-    SANTAFEHYB_HVBAT_CMU021_VOLT: 3.5
-    SANTAFEHYB_HVBAT_CMU022_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU019_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU020_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU021_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU022_VOLT: 3.52
     SANTAFEHYB_HVBAT_CMU023_VOLT: 3.5
-    SANTAFEHYB_HVBAT_CMU024_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU024_VOLT: 3.52
     SANTAFEHYB_HVBAT_CMU025_VOLT: 3.5
     SANTAFEHYB_HVBAT_CMU026_VOLT: 3.5
     SANTAFEHYB_HVBAT_CMU027_VOLT: 3.5
@@ -115,10 +155,10 @@ test_cases:
     SANTAFEHYB_HVBAT_CMU032_VOLT: 3.5
   response: |-
     7EC1027620102FFFFFF
-    7EC21FFAEAFAFAFAFAF
-    7EC22AFAFAFAFAFAFAF
-    7EC23AFAFAFAFAFAFAF
-    7EC24AFAFAFAFAFAFAF
+    7EC21FFAEAEAFAFAFAF
+    7EC22AFB0B0B0B0B0B0
+    7EC23AFAFB0B0AFB0B0
+    7EC24B0B0AFB0AFAFAF
     7EC25AFAFAFAFAFAAAA
 - expected_values:
     SANTAFEHYB_HVBAT_CMU001_VOLT: 3.5
