--- a/tests/test_cases/2025/commands/7E2.7EA.22E004.yaml
+++ b/tests/test_cases/2025/commands/7E2.7EA.22E004.yaml
@@ -76,6 +76,15 @@ test_cases:
     SANTAFEHYB_VPWR: 3
   response: |-
     7EA102762E004BD71F0
+    7EA21000000000B001F
+    7EA22BB074100000000
+    7EA2300000303000000
+    7EA2400000000FFECFF
+    7EA25ECFFF5FFF5AAAA
+- expected_values:
+    SANTAFEHYB_VPWR: 3
+  response: |-
+    7EA102762E004BD71F0
     7EA21000000000B0F1F
     7EA22AC074F00000000
     7EA2300000303000000
