--- a/tests/test_cases/2025/commands/7E4.7EC.220102|fc=1.yaml
+++ b/tests/test_cases/2025/commands/7E4.7EC.220102|fc=1.yaml
@@ -82,6 +82,46 @@ test_cases:
     7EC25A8A8A8A8A8AAAA
 - expected_values:
     SANTAFEHYB_HVBAT_CMU001_VOLT: 3.46
+    SANTAFEHYB_HVBAT_CMU002_VOLT: 3.46
+    SANTAFEHYB_HVBAT_CMU003_VOLT: 3.46
+    SANTAFEHYB_HVBAT_CMU004_VOLT: 3.46
+    SANTAFEHYB_HVBAT_CMU005_VOLT: 3.48
+    SANTAFEHYB_HVBAT_CMU006_VOLT: 3.48
+    SANTAFEHYB_HVBAT_CMU007_VOLT: 3.48
+    SANTAFEHYB_HVBAT_CMU008_VOLT: 3.48
+    SANTAFEHYB_HVBAT_CMU009_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU010_VOLT: 3.48
+    SANTAFEHYB_HVBAT_CMU011_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU012_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU013_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU014_VOLT: 3.48
+    SANTAFEHYB_HVBAT_CMU015_VOLT: 3.48
+    SANTAFEHYB_HVBAT_CMU016_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU017_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU018_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU019_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU020_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU021_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU022_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU023_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU024_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU025_VOLT: 3.48
+    SANTAFEHYB_HVBAT_CMU026_VOLT: 3.48
+    SANTAFEHYB_HVBAT_CMU027_VOLT: 3.48
+    SANTAFEHYB_HVBAT_CMU028_VOLT: 3.48
+    SANTAFEHYB_HVBAT_CMU029_VOLT: 3.48
+    SANTAFEHYB_HVBAT_CMU030_VOLT: 3.48
+    SANTAFEHYB_HVBAT_CMU031_VOLT: 3.48
+    SANTAFEHYB_HVBAT_CMU032_VOLT: 3.48
+  response: |-
+    7EC1027620102FFFFFF
+    7EC21FFADADADADAEAE
+    7EC22AEAEAFAEAFAFAF
+    7EC23AEAEAFAFAFAFAF
+    7EC24AFAFAFAFAEAEAE
+    7EC25AEAEAEAEAEAAAA
+- expected_values:
+    SANTAFEHYB_HVBAT_CMU001_VOLT: 3.46
     SANTAFEHYB_HVBAT_CMU002_VOLT: 3.48
     SANTAFEHYB_HVBAT_CMU003_VOLT: 3.48
     SANTAFEHYB_HVBAT_CMU004_VOLT: 3.5
