--- a/tests/test_cases/2025/commands/7E0.0110.yaml
+++ b/tests/test_cases/2025/commands/7E0.0110.yaml
@@ -7,5 +7,5 @@ test_cases:
     MAF: 28.11
   response: 7E80441100AFB
 - expected_values:
-    MAF: 41.75
-  response: 7E8044110104F
+    MAF: 44.33
+  response: '7E80441101151'
