--- a/tests/test_cases/2025/commands/7E0.0134.yaml
+++ b/tests/test_cases/2025/commands/7E0.0134.yaml
@@ -1,6 +1,10 @@
 command_id: 7E0.0134
 test_cases:
 - expected_values:
+    LAMBDA11_CURRENT: 0
+    O2S11_CURRENT: 0
+  response: '7E806413400008000'
+- expected_values:
     LAMBDA11_CURRENT: 0.7944
     O2S11_CURRENT: -0.99609
   response: 7E806413465AF7F01
@@ -8,14 +12,6 @@ test_cases:
     LAMBDA11_CURRENT: 0.99997
     O2S11_CURRENT: -0.01953
   response: 7E80641347FFF7FFB
-- expected_values:
-    LAMBDA11_CURRENT: 1.00681
-    O2S11_CURRENT: 0
-  response: 7E806413480DF8000
-- expected_values:
-    LAMBDA11_CURRENT: 1.46115
-    O2S11_CURRENT: 0.67969
-  response: 7E8064134BB0780AE
 - expected_values:
     LAMBDA11_CURRENT: 1.78171
     O2S11_CURRENT: 0.99609
