--- a/tests/test_cases/2025/commands/7E0.0131.yaml
+++ b/tests/test_cases/2025/commands/7E0.0131.yaml
@@ -9,3 +9,6 @@ test_cases:
 - expected_values:
     CLR_DIST: 13312
   response: '7E80441313400'
+- expected_values:
+    CLR_DIST: 13568
+  response: '7E80441313500'
