--- a/tests/test_cases/2025/commands/7E0.0144.yaml
+++ b/tests/test_cases/2025/commands/7E0.0144.yaml
@@ -7,8 +7,8 @@ test_cases:
     EQ_RAT: 0.87498
   response: 7E80441446FFF
 - expected_values:
-    EQ_RAT: 1.06322
-  response: '7E80441448817'
+    EQ_RAT: 0.91453
+  response: 7E8044144750F
 - expected_values:
     EQ_RAT: 1.99
   response: 7E8044144FFFF
