--- a/tests/test_cases/2025/commands/7E0.0111.yaml
+++ b/tests/test_cases/2025/commands/7E0.0111.yaml
@@ -1,8 +1,8 @@
 command_id: 7E0.0111
 test_cases:
 - expected_values:
-    TP: 12.15686
-  response: 7E80341111F
+    TP: 9.80392
+  response: '7E803411119'
 - expected_values:
     TP: 85.88235
   response: 7E8034111DB
