--- a/tests/test_cases/2025/commands/7E2.7EA.22E004.yaml
+++ b/tests/test_cases/2025/commands/7E2.7EA.22E004.yaml
@@ -77,6 +77,15 @@ test_cases:
   response: |-
     7EA102762E004BD71F0
     7EA21000000000B001F
+    7EA22A4075800000000
+    7EA2300000303000000
+    7EA2400000000FFE2FF
+    7EA25E200010001AAAA
+- expected_values:
+    SANTAFEHYB_VPWR: 3
+  response: |-
+    7EA102762E004BD71F0
+    7EA21000000000B001F
     7EA22BB074100000000
     7EA2300000303000000
     7EA2400000000FFECFF
@@ -95,10 +104,10 @@ test_cases:
   response: |-
     7EA102762E004BD71F0
     7EA21000000000B0F1F
-    7EA22AC074F00000000
+    7EA22AB075000000000
     7EA2300000303000000
-    7EA2400000000FFD5FF
-    7EA25D5FFDBFFDBAAAA
+    7EA2400000000FFE2FF
+    7EA25E200010001AAAA
 - expected_values:
     SANTAFEHYB_VPWR: 0
   response: |-
