--- a/tests/test_cases/2025/commands/7E4.7EC.220102|fc=1.yaml
+++ b/tests/test_cases/2025/commands/7E4.7EC.220102|fc=1.yaml
@@ -286,6 +286,46 @@ test_cases:
     SANTAFEHYB_HVBAT_CMU003_VOLT: 3.5
     SANTAFEHYB_HVBAT_CMU004_VOLT: 3.5
     SANTAFEHYB_HVBAT_CMU005_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU006_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU007_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU008_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU009_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU010_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU011_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU012_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU013_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU014_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU015_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU016_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU017_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU018_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU019_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU020_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU021_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU022_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU023_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU024_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU025_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU026_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU027_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU028_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU029_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU030_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU031_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU032_VOLT: 3.5
+  response: |-
+    7EC1027620102FFFFFF
+    7EC21FFAEAFAFAFB0AF
+    7EC22B0B0B0B0B0B0B0
+    7EC23B0AFB0B0AFB0AF
+    7EC24AFB0AFB0B0B0B0
+    7EC25B0AFAFAFAFAAAA
+- expected_values:
+    SANTAFEHYB_HVBAT_CMU001_VOLT: 3.48
+    SANTAFEHYB_HVBAT_CMU002_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU003_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU004_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU005_VOLT: 3.52
     SANTAFEHYB_HVBAT_CMU006_VOLT: 3.52
     SANTAFEHYB_HVBAT_CMU007_VOLT: 3.52
     SANTAFEHYB_HVBAT_CMU008_VOLT: 3.52
@@ -889,37 +929,37 @@ test_cases:
     SANTAFEHYB_HVBAT_CMU006_VOLT: 3.84
     SANTAFEHYB_HVBAT_CMU007_VOLT: 3.84
     SANTAFEHYB_HVBAT_CMU008_VOLT: 3.84
-    SANTAFEHYB_HVBAT_CMU009_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU009_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU010_VOLT: 3.84
     SANTAFEHYB_HVBAT_CMU011_VOLT: 3.84
     SANTAFEHYB_HVBAT_CMU012_VOLT: 3.84
-    SANTAFEHYB_HVBAT_CMU013_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU013_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU014_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU015_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU016_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU017_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU018_VOLT: 3.84
-    SANTAFEHYB_HVBAT_CMU019_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU019_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU020_VOLT: 3.82
-    SANTAFEHYB_HVBAT_CMU021_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU021_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU022_VOLT: 3.84
-    SANTAFEHYB_HVBAT_CMU023_VOLT: 3.84
-    SANTAFEHYB_HVBAT_CMU024_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU023_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU024_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU025_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU026_VOLT: 3.82
-    SANTAFEHYB_HVBAT_CMU027_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU027_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU028_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU029_VOLT: 3.84
-    SANTAFEHYB_HVBAT_CMU030_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU030_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU031_VOLT: 3.84
     SANTAFEHYB_HVBAT_CMU032_VOLT: 3.84
   response: |-
     7EC1027620102FFFFFF
     7EC21FFC0C0C0C0C0C0
-    7EC22C0C0C0C0C0C0C0
-    7EC23BFBFBFBFC0C0BF
-    7EC24C0C0C0C0BFBFC0
-    7EC25BFC0C0C0C0AAAA
+    7EC22C0C0BFC0C0C0BF
+    7EC23BFBFBFBFC0BFBF
+    7EC24BFC0BFBFBFBFBF
+    7EC25BFC0BFC0C0AAAA
 - expected_values:
     SANTAFEHYB_HVBAT_CMU001_VOLT: 4.12
     SANTAFEHYB_HVBAT_CMU002_VOLT: 4.14
