--- a/tests/test_cases/2025/commands/7E4.7EC.220103|fc=1.yaml
+++ b/tests/test_cases/2025/commands/7E4.7EC.220103|fc=1.yaml
@@ -311,7 +311,7 @@ test_cases:
     SANTAFEHYB_HVBAT_CMU060_VOLT: 3.52
     SANTAFEHYB_HVBAT_CMU061_VOLT: 3.52
     SANTAFEHYB_HVBAT_CMU062_VOLT: 3.52
-    SANTAFEHYB_HVBAT_CMU063_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU063_VOLT: 3.5
     SANTAFEHYB_HVBAT_CMU064_VOLT: 3.52
   response: |-
     7EC1027620103FFFFFF
@@ -319,7 +319,7 @@ test_cases:
     7EC22B0B0B0B0B0B0B0
     7EC23B0B0B0B0B0B0B0
     7EC24B0B0B0B0B0B0B0
-    7EC25B0B0B0B0B0AAAA
+    7EC25B0B0B0AFB0AAAA
 - expected_values:
     SANTAFEHYB_HVBAT_CMU033_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU034_VOLT: 3.82
@@ -640,6 +640,46 @@ test_cases:
     7EC23C0C0C0C0C0BFC0
     7EC24C0C0C0C0C0C0C0
     7EC25C0C0C0C0C0AAAA
+- expected_values:
+    SANTAFEHYB_HVBAT_CMU033_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU034_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU035_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU036_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU037_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU038_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU039_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU040_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU041_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU042_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU043_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU044_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU045_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU046_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU047_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU048_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU049_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU050_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU051_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU052_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU053_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU054_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU055_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU056_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU057_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU058_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU059_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU060_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU061_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU062_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU063_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU064_VOLT: 3.84
+  response: |-
+    7EC1027620103FFFFFF
+    7EC21FFC0C0C0C0C0C0
+    7EC22BFC0C0C0C0C0C0
+    7EC23C0C0C0C0C0BFC0
+    7EC24BFC0C0C0C0C0BF
+    7EC25C0C0C0BFC0AAAA
 - expected_values:
     SANTAFEHYB_HVBAT_CMU033_VOLT: 4.14
     SANTAFEHYB_HVBAT_CMU034_VOLT: 4.14
