--- a/tests/test_cases/2025/commands/7E4.7EC.220104|fc=1.yaml
+++ b/tests/test_cases/2025/commands/7E4.7EC.220104|fc=1.yaml
@@ -1,6 +1,22 @@
 command_id: 7E4.7EC.220104|fc=1
 test_cases:
 - expected_values:
+    SANTAFEHYB_HVBAT_CMU065_VOLT: 3.26
+    SANTAFEHYB_HVBAT_CMU066_VOLT: 3.24
+    SANTAFEHYB_HVBAT_CMU067_VOLT: 3.24
+    SANTAFEHYB_HVBAT_CMU068_VOLT: 3.24
+    SANTAFEHYB_HVBAT_CMU069_VOLT: 3.24
+    SANTAFEHYB_HVBAT_CMU070_VOLT: 3.24
+    SANTAFEHYB_HVBAT_CMU071_VOLT: 3.2
+    SANTAFEHYB_HVBAT_CMU072_VOLT: 3.2
+  response: |-
+    7EC1027620104FF0000
+    7EC2100A3A2A2A2A2A2
+    7EC22A0A00000000000
+    7EC2300000000000000
+    7EC2400000000000000
+    7EC250000000000AAAA
+- expected_values:
     SANTAFEHYB_HVBAT_CMU065_VOLT: 3.28
     SANTAFEHYB_HVBAT_CMU066_VOLT: 3.26
     SANTAFEHYB_HVBAT_CMU067_VOLT: 3.26
