--- a/tests/test_cases/2025/commands/7A0.7A8.22C00B|fc=1.yaml
+++ b/tests/test_cases/2025/commands/7A0.7A8.22C00B|fc=1.yaml
@@ -21,6 +21,18 @@ test_cases:
     7A8102462C00BFFFFFF
     7A821F8000000000200
     7A82200000002000000
+    7A82300020000000002
+    7A824FFFFFFFFFFFFFF
+    7A825FFFFAAAAAAAAAA
+- expected_values:
+    SANTAFEHYB_TP_FL: 0
+    SANTAFEHYB_TP_FR: 0.4
+    SANTAFEHYB_TP_RL: 0
+    SANTAFEHYB_TP_RR: 0
+  response: |-
+    7A8102462C00BFFFFFF
+    7A821F8000000000200
+    7A82200000002000000
     7A8230002A834000400
     7A82433FFFFFFFFFFFF
     7A8258DB0AAAAAAAAAA
