--- a/tests/test_cases/2025/commands/7E4.7EC.220101|fc=1.yaml
+++ b/tests/test_cases/2025/commands/7E4.7EC.220101|fc=1.yaml
@@ -499,6 +499,21 @@ test_cases:
     SANTAFEHYB_HVBAT_CHARGING: 0
     SANTAFEHYB_HVBAT_PLUG_NORM: 0
     SANTAFEHYB_HVBAT_PLUG_RAPD: 0
+    SANTAFEHYB_HVBAT_SOC: 51.5
+  response: |-
+    7EC103E6201018FF3FF
+    7EC21EF670000000000
+    7EC22FDA80A811F1D1E
+    7EC231F1F1D00002ABC
+    7EC2448BC3300199100
+    7EC2500A6A60000A678
+    7EC2600002CBE00002A
+    7EC277D000FD06B0001
+    7EC281008DF15E403E8
+- expected_values:
+    SANTAFEHYB_HVBAT_CHARGING: 0
+    SANTAFEHYB_HVBAT_PLUG_NORM: 0
+    SANTAFEHYB_HVBAT_PLUG_RAPD: 0
     SANTAFEHYB_HVBAT_SOC: 52.5
   response: |-
     7EC103E6201018FF3FF
