--- a/tests/test_cases/2025/commands/7E4.7EC.220103|fc=1.yaml
+++ b/tests/test_cases/2025/commands/7E4.7EC.220103|fc=1.yaml
@@ -125,6 +125,46 @@ test_cases:
     SANTAFEHYB_HVBAT_CMU034_VOLT: 3.5
     SANTAFEHYB_HVBAT_CMU035_VOLT: 3.5
     SANTAFEHYB_HVBAT_CMU036_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU037_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU038_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU039_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU040_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU041_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU042_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU043_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU044_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU045_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU046_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU047_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU048_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU049_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU050_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU051_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU052_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU053_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU054_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU055_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU056_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU057_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU058_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU059_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU060_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU061_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU062_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU063_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU064_VOLT: 3.5
+  response: |-
+    7EC1027620103FFFFFF
+    7EC21FFAFAFAFB0AFAF
+    7EC22AFAFAFAFAFB0AF
+    7EC23B0AFB0B0AFAFAF
+    7EC24AFAFAFAFAFAFAF
+    7EC25AFAFAFAFAFAAAA
+- expected_values:
+    SANTAFEHYB_HVBAT_CMU033_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU034_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU035_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU036_VOLT: 3.52
     SANTAFEHYB_HVBAT_CMU037_VOLT: 3.52
     SANTAFEHYB_HVBAT_CMU038_VOLT: 3.5
     SANTAFEHYB_HVBAT_CMU039_VOLT: 3.5
