--- a/tests/test_cases/2025/commands/7E0.0110.yaml
+++ b/tests/test_cases/2025/commands/7E0.0110.yaml
@@ -7,5 +7,5 @@ test_cases:
     MAF: 20.47
   response: 7E804411007FF
 - expected_values:
-    MAF: 65.02
-  response: '7E80441101966'
+    MAF: 76.22
+  response: 7E80441101DC6
