--- a/tests/test_cases/2025/commands/7E2.7EA.22E004.yaml
+++ b/tests/test_cases/2025/commands/7E2.7EA.22E004.yaml
@@ -94,6 +94,15 @@ test_cases:
     SANTAFEHYB_VPWR: 3
   response: |-
     7EA102762E004BD71F0
+    7EA21000000000B001F
+    7EA22AC075000000000
+    7EA2300000303000000
+    7EA2400000000FFDEFF
+    7EA25DEFFFEFFFEAAAA
+- expected_values:
+    SANTAFEHYB_VPWR: 3
+  response: |-
+    7EA102762E004BD71F0
     7EA21000000000B0700
     7EA2200074700000000
     7EA2300000303000000
