--- a/tests/test_cases/2025/commands/7E4.7EC.220103|fc=1.yaml
+++ b/tests/test_cases/2025/commands/7E4.7EC.220103|fc=1.yaml
@@ -169,7 +169,7 @@ test_cases:
     SANTAFEHYB_HVBAT_CMU038_VOLT: 3.5
     SANTAFEHYB_HVBAT_CMU039_VOLT: 3.5
     SANTAFEHYB_HVBAT_CMU040_VOLT: 3.5
-    SANTAFEHYB_HVBAT_CMU041_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU041_VOLT: 3.5
     SANTAFEHYB_HVBAT_CMU042_VOLT: 3.5
     SANTAFEHYB_HVBAT_CMU043_VOLT: 3.5
     SANTAFEHYB_HVBAT_CMU044_VOLT: 3.5
@@ -196,10 +196,90 @@ test_cases:
   response: |-
     7EC1027620103FFFFFF
     7EC21FFAFAFAFB0AFAF
-    7EC22AFAFB0AFAFAFAF
+    7EC22AFAFAFAFAFAFAF
     7EC23AFAFAFAFAFAFAF
     7EC24AFAFAFAFAFAFAF
     7EC25AFAFAFAFAFAAAA
+- expected_values:
+    SANTAFEHYB_HVBAT_CMU033_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU034_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU035_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU036_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU037_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU038_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU039_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU040_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU041_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU042_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU043_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU044_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU045_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU046_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU047_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU048_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU049_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU050_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU051_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU052_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU053_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU054_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU055_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU056_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU057_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU058_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU059_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU060_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU061_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU062_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU063_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU064_VOLT: 3.5
+  response: |-
+    7EC1027620103FFFFFF
+    7EC21FFAFAFAFB0AFAF
+    7EC22AFAFAFAFAFAFAF
+    7EC23AFAFAFB0AFAFAF
+    7EC24AFAFAFAFAFAFAF
+    7EC25AFAFAFAFAFAAAA
+- expected_values:
+    SANTAFEHYB_HVBAT_CMU033_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU034_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU035_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU036_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU037_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU038_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU039_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU040_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU041_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU042_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU043_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU044_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU045_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU046_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU047_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU048_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU049_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU050_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU051_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU052_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU053_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU054_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU055_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU056_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU057_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU058_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU059_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU060_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU061_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU062_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU063_VOLT: 3.48
+    SANTAFEHYB_HVBAT_CMU064_VOLT: 3.48
+  response: |-
+    7EC1027620103FFFFFF
+    7EC21FFAFAFAFB0B0AF
+    7EC22AFAFB0AFAFAFAF
+    7EC23B0AFB0AFAFAFAF
+    7EC24AFAFAFAFAFAFAF
+    7EC25AFAFAFAEAEAAAA
 - expected_values:
     SANTAFEHYB_HVBAT_CMU033_VOLT: 3.5
     SANTAFEHYB_HVBAT_CMU034_VOLT: 3.5
@@ -769,7 +849,7 @@ test_cases:
     SANTAFEHYB_HVBAT_CMU038_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU039_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU040_VOLT: 3.82
-    SANTAFEHYB_HVBAT_CMU041_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU041_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU042_VOLT: 3.84
     SANTAFEHYB_HVBAT_CMU043_VOLT: 3.84
     SANTAFEHYB_HVBAT_CMU044_VOLT: 3.84
@@ -780,7 +860,7 @@ test_cases:
     SANTAFEHYB_HVBAT_CMU049_VOLT: 3.84
     SANTAFEHYB_HVBAT_CMU050_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU051_VOLT: 3.84
-    SANTAFEHYB_HVBAT_CMU052_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU052_VOLT: 3.84
     SANTAFEHYB_HVBAT_CMU053_VOLT: 3.84
     SANTAFEHYB_HVBAT_CMU054_VOLT: 3.84
     SANTAFEHYB_HVBAT_CMU055_VOLT: 3.84
@@ -796,8 +876,8 @@ test_cases:
   response: |-
     7EC1027620103FFFFFF
     7EC21FFC0C0C0C0C0BF
-    7EC22BFBFC0C0C0C0C0
-    7EC23C0C0C0C0BFC0BF
+    7EC22BFBFBFC0C0C0C0
+    7EC23C0C0C0C0BFC0C0
     7EC24C0C0C0C0C0C0C0
     7EC25C0C0C0C0C0AAAA
 - expected_values:
