--- a/tests/test_cases/2025/commands/7E4.7EC.220104|fc=1.yaml
+++ b/tests/test_cases/2025/commands/7E4.7EC.220104|fc=1.yaml
@@ -209,6 +209,22 @@ test_cases:
     7EC2400000000000000
     7EC250000000000AAAA
 - expected_values:
+    SANTAFEHYB_HVBAT_CMU065_VOLT: 4.12
+    SANTAFEHYB_HVBAT_CMU066_VOLT: 4.12
+    SANTAFEHYB_HVBAT_CMU067_VOLT: 4.12
+    SANTAFEHYB_HVBAT_CMU068_VOLT: 4.12
+    SANTAFEHYB_HVBAT_CMU069_VOLT: 4.12
+    SANTAFEHYB_HVBAT_CMU070_VOLT: 4.14
+    SANTAFEHYB_HVBAT_CMU071_VOLT: 4.16
+    SANTAFEHYB_HVBAT_CMU072_VOLT: 4.16
+  response: |-
+    7EC1027620104FF0000
+    7EC2100CECECECECECF
+    7EC22D0D00000000000
+    7EC2300000000000000
+    7EC2400000000000000
+    7EC250000000000AAAA
+- expected_values:
     SANTAFEHYB_HVBAT_CMU065_VOLT: 4.16
     SANTAFEHYB_HVBAT_CMU066_VOLT: 4.16
     SANTAFEHYB_HVBAT_CMU067_VOLT: 4.16
